--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 .DS_Store
 virtualenv
+enviroment
+.idea
 .env
 __pycache__/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
