Comment vpc configuration

--- a/.ebextensions/vpc.config
+++ b/.ebextensions/vpc.config
@@ -1,7 +1,7 @@
-option_settings:
-  aws:ec2:vpc:
-    VPCId: vpc-0150b0d216b78ec1f
-    AssociatePublicIpAddress: "false"
-    ELBScheme: public
-    ELBSubnets: subnet-0417097e4073ecedc,subnet-0e94cb03b0f1fa034
-    Subnets: subnet-05076f823577fda68,subnet-0910c9852c33d0414
+#option_settings:
+#  aws:ec2:vpc:
+#    VPCId: vpc-0150b0d216b78ec1f
+#    AssociatePublicIpAddress: "false"
+#    ELBScheme: public
+#    ELBSubnets: subnet-0417097e4073ecedc,subnet-0e94cb03b0f1fa034
+#    Subnets: subnet-05076f823577fda68,subnet-0910c9852c33d0414
