--- a/.ebextensions/ec2.config
+++ b/.ebextensions/ec2.config
@@ -1,3 +1,3 @@
-option_settings:
-  aws:ec2:instances:
-    InstanceTypes: t2.micro,t3.micro
+#option_settings:
+#  aws:ec2:instances:
+#    InstanceTypes: t2.micro,t3.micro
