--- a/.ebextensions/vpc.config
+++ b/.ebextensions/vpc.config
@@ -1,7 +1,7 @@
-#option_settings:
-#  aws:ec2:vpc:
-#    VPCId: vpc-0150b0d216b78ec1f
-#    AssociatePublicIpAddress: "false"
-#    ELBScheme: public
-#    ELBSubnets: subnet-0417097e4073ecedc,subnet-0e94cb03b0f1fa034
-#    Subnets: subnet-05076f823577fda68,subnet-0910c9852c33d0414
+option_settings:
+  aws:ec2:vpc:
+    VPCId: vpc-089e7fd18c68f8eb4
+    AssociatePublicIpAddress: "false"
+    ELBScheme: public
+    ELBSubnets: subnet-03982de8541fe314b,subnet-087507503f4384a58
+    Subnets: subnet-098753f50e93e1211,subnet-0e1499423a2c3e205
