flask_cors added

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,17 @@
-aniso8601==8.0.0
+botocore==1.14.11
+certifi==2019.11.28
 click==7.1.1
-dnspython==1.16.0
-ecdsa==0.15
-Flask==1.1.1
-Flask-API==2.0
+docutils==0.15.2
+Flask==1.1.2
 Flask-Cors==3.0.8
-flask-mongoengine==0.9.5
-Flask-PyMongo==2.3.0
-Flask-RESTful==0.3.8
-Flask-WTF==0.14.3
-gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.11.2
+jmespath==0.9.4
 MarkupSafe==1.1.1
-mongoengine==0.19.1
-pyasn1==0.4.8
-pymongo==3.10.1
-python-dotenv==0.12.0
-python-jose==3.1.0
-pytz==2019.3
-rsa==4.0
+pipenv==2018.11.26
+python-dateutil==2.8.1
 six==1.14.0
-Werkzeug==1.0.0
-WTForms==2.2.1
+urllib3==1.25.8
+virtualenv==16.7.9
+virtualenv-clone==0.5.3
+Werkzeug==1.0.1
