--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -11,7 +11,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: covid-eb-deployer
+  profile: 5vid-eb-deploy
   repository: null
   sc: git
   workspace_type: Application
