--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==8.0.0
 Cerberus==1.3.2
 click==7.1.1
+dnspython==1.16.0
 ecdsa==0.15
 Flask==1.1.1
 Flask-API==2.0
@@ -9,6 +10,7 @@ flask-mongoengine==0.9.5
 Flask-PyMongo==2.3.0
 Flask-RESTful==0.3.8
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
