Updating eb configuration.

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   master:
-    environment: covid-doctors-api-dev
+    environment: covid-doctors-api-prod
     group_suffix: null
 global:
   application_name: covid-doctors-api
@@ -11,7 +11,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: 5vid-eb-deploy
+  profile: 5vid-eb-deployment
   repository: null
   sc: git
   workspace_type: Application
